<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.sonarlog.SonarLoggerActivity" >
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
        
    
   	<TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_projects"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <Spinner
        android:id="@+id/projectSpinner"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:visibility="visible" >

	</Spinner>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/loadProjectButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="loadProjectButtonClickHandler"
                    android:text="@string/load_project" />

            	<Button
            	    android:id="@+id/deleteProjectButton"
            	    style="?android:attr/buttonStyleSmall"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:onClick="deleteProjectButtonClickHandler"
            	    android:text="@string/delete_project" />
                
            </TableRow>

            <EditText
                android:id="@+id/newProjectEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/project_name_hint" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/newProjectButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="newProjectButtonClickHandler"
                android:text="@string/new_project" />
        </TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_service"
                android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>    		    
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >    
            
            <ToggleButton
                android:id="@+id/sonarToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:hint="@string/toggle_sonar_hint"
                android:onClick="runButtonClickHandler"
                android:text="@string/toggle_sonar_on"
                android:textOff="@string/sonar_off"
                android:textOn="@string/sonar_on" >
			</ToggleButton>
	    </TableRow>
	    
	    <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >        
    		<CheckBox
    		    android:id="@+id/appendCheckBox"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:checked="true"
    		    android:onClick="checkBoxClickHandler"
    		    android:text="@string/mode_append_logs" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow101"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >            
        	<TextView
      	  	    android:id="@+id/textViewAccThreshold"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/acc_threshold_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>

        	<EditText
        	    android:id="@+id/gpsAccuracyEditText"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:ems="10"
        	    android:inputType="text"
        	    android:text="@string/acc_threshold" >

        	    <requestFocus />
        	</EditText>

        </TableRow>
        
        <TableRow
      	    android:id="@+id/tableRow30"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >	            
        	<TextView
        	    android:id="@+id/textViewStatistics"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/statistics_header"
        	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
		</TableRow>

		<TableRow
      	    android:id="@+id/tableRow24"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >
      	  	<TextView
      	  	    android:id="@+id/textView_tot_pos_label"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/tot_pos_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
      	  	<TextView
      	  	    android:id="@+id/textView_tot_pos"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/init_tot_pos"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>  	      	    	  
      	</TableRow>

		<TableRow
      	    android:id="@+id/tableRow241"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >
      	  	<TextView
      	  	    android:id="@+id/textView_valid_pos_label"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/valid_pos_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
      	  	<TextView
      	  	    android:id="@+id/textView_valid_pos"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/init_valid_pos"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
      	
      	</TableRow>
	    <TableRow
      	    android:id="@+id/tableRow232"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >
      	  	<TextView
      	  	    android:id="@+id/textView_total_depths_label"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/total_depths_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
			
      	  	<TextView
      	  	    android:id="@+id/total_depth_text_view"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/init_total_depths"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
		</TableRow>
		<TableRow
      	    android:id="@+id/tableRow23"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >
      	  	<TextView
      	  	    android:id="@+id/textView_logged_depths_label"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/logged_depths_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
			
      	  	<TextView
      	  	    android:id="@+id/logged_depth_text_view"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/init_logged_depths"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
		</TableRow>
		<TableRow
      	    android:id="@+id/tableRow25"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >
      	  	<TextView
      	  	    android:id="@+id/textView_gps_accuracy_label"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/gps_accuracy_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
			
      	  	<TextView
      	  	    android:id="@+id/gps_accuracy"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/init_gps_accuracy"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
		</TableRow>
		<TableRow
      	    android:id="@+id/tableRow26"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content" >
      	  	<TextView
      	  	    android:id="@+id/textView_distance_label"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/distance_label"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
			
      	  	<TextView
      	  	    android:id="@+id/distance"
      	  	    android:layout_width="wrap_content"
      	  	    android:layout_height="wrap_content"
      	  	    android:text="@string/init_distance"
      	  	    android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>
		</TableRow>
		
			
		
    </TableLayout>
	            
	</LinearLayout>
</ScrollView>